--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="asset/css/style.css" />
+    <!-- Theme CSS -->
+    <link rel="stylesheet" href="asset/css/theme.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="asset/bootstrap-5.3.7/css/bootstrap.css" />
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- aos -->
+     <link rel="stylesheet" href="asset/aos-master/dist/aos.css">
+     <!-- Google Fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@100;300;400;500;700;900&family=Hanuman:wght@100;300;400;700;900&family=Battambang:wght@100;300;400;700;900&family=Koulen&family=Moul&display=swap" rel="stylesheet">
+
+    <title>Mini Project Javascript</title>
+  </head>
+ <body>
+    <h1>
+        Hello Team
+    </h1>
+ 
+  </body>
+    <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
+    <script src="asset/aos-master/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+ 
 </html>
