--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </body>
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
     <script src="asset/aos-master/dist/aos.js"></script>
+    <script src="asset/js/script.js"></script>
     <script>
       AOS.init();
     </script>
