--- a/index.html
+++ b/index.html
@@ -1,35 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="asset/css/style.css" />
-    <!-- Theme CSS -->
-    <link rel="stylesheet" href="asset/css/theme.css">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="asset/bootstrap-5.3.7/css/bootstrap.css" />
-    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="asset/css/dashboard.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <!-- aos -->
-     <link rel="stylesheet" href="asset/aos-master/dist/aos.css">
-     <!-- Google Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@100;300;400;500;700;900&family=Hanuman:wght@100;300;400;700;900&family=Battambang:wght@100;300;400;700;900&family=Koulen&family=Moul&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="asset/aos-master/dist/aos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>Mini Project Javascript</title>
-  </head>
- <body>
-    <h1>
-        Hello Team
-    </h1>
- 
-  </body>
+    <title>Modern Login - Mini Project</title>
+    <style>
+        .card {
+            border-radius: 20px;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            border: none;
+        }
+        #login-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(25, 135, 84, 0.4) !important;
+        }
+        .form-control:focus {
+            box-shadow: none;
+            border-color: #198754;
+            background-color: #fff !important;
+        }
+        .input-group-text {
+            border: 1px solid #dee2e6;
+            cursor: pointer;
+        }
+        .login-icon {
+            background: #198754;
+            color: white;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 20px;
+            font-size: 1.5rem;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container" data-aos="zoom-in">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+                <div class="card shadow-lg mt-5">
+                    <div class="card-body p-5">
+                        
+                        <div class="login-icon">
+                            <i class="bi bi-person-fill-lock"></i>
+                        </div>
+                        <h3 class="text-center mb-4 fw-bold text-success">Welcome Back!</h3>
+                        
+                        <div id="error-msg" class="text-danger mb-3 small text-center fw-medium"></div>
+
+                        <div class="mb-3">
+                            <label class="form-label small fw-bold text-secondary">Email Address</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0 text-muted"><i class="bi bi-envelope"></i></span>
+                                <input id="email" type="email" class="form-control bg-light border-start-0 ps-0" placeholder="example@mail.com">
+                            </div>
+                        </div>
+
+                        <div class="mb-4">
+                            <label class="form-label small fw-bold text-secondary">Password</label>
+                            <div class="input-group">
+                                <span class="input-group-text bg-light border-end-0 text-muted"><i class="bi bi-lock"></i></span>
+                                <input id="password" type="password" class="form-control bg-light border-start-0 border-end-0 ps-0" placeholder="••••••••">
+                                <span class="input-group-text bg-light border-start-0 text-muted" onclick="togglePassword()">
+                                    <i id="toggleIcon" class="bi bi-eye-slash"></i>
+                                </span>
+                            </div>
+                        </div>
+
+                        <button id="login-btn" class="btn btn-success w-100 py-2 fw-bold shadow-sm mb-3" onclick="login()">
+                            Sign In
+                        </button>
+
+                        <div class="text-center">
+                            <p class="text-muted small">Don't have an account? 
+                                <a href="register.html" class="text-success fw-bold text-decoration-none">Register here</a>
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
     <script src="asset/aos-master/dist/aos.js"></script>
-    <script src="asset/js/script.js"></script>
+    <script src="asset/js/auth/login.js"></script>
     <script>
-      AOS.init();
+        AOS.init();
     </script>
-
- 
+</body>
 </html>
