--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                         <div class="text-center">
                             <p class="text-muted small">Don't have an account? 
-                                <a href="register.html" class="text-success fw-bold text-decoration-none">Register here</a>
+                                <a href="pages/register.html" class="text-success fw-bold text-decoration-none">Register here</a>
                             </p>
                         </div>
 
@@ -94,7 +94,6 @@
             </div>
         </div>
     </div>
-
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
     <script src="asset/aos-master/dist/aos.js"></script>
     <script src="asset/js/auth/login.js"></script>
