--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
     <script src="asset/bootstrap-5.3.7/js/bootstrap.bundle.min.js"></script>
     <script src="asset/aos-master/dist/aos.js"></script>
     <script src="asset/js/auth/login.js"></script>
+    <!-- sweet alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         AOS.init();
+      
+
     </script>
 </body>
 </html>
