--- a/pages/register.html
+++ b/pages/register.html
@@ -41,8 +41,8 @@
         <div class="col-md-6">
             <div class="card shadow-lg border-0 p-4">
                 <div class="text-center mb-4">
-                    <div class="bg-success d-inline-block p-3 rounded-circle text-white mb-3">
-                        <i class="bi bi-person-plus fs-3"></i>
+                    <div class=" d-inline-block p-3 rounded-circle text-white mb-3 ">
+                        <i class="bi bi-person-plus fs-3 register-icon"></i>
                     </div>
                     <h3 class="fw-bold text-success">Create Account</h3>
                 </div>
@@ -102,7 +102,6 @@ async function register() {
 
     btn.disabled = true;
     btn.innerHTML = `<span class="spinner-border spinner-border-sm"></span>`;
-
     try {
         const response = await fetch('https://blogs2.csm.linkpc.net/api/v1/auth/register', {
             method: 'POST',
