--- a/pages/chhaiy/allArticles.html
+++ b/pages/chhaiy/allArticles.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="../../asset/css/dashboard.css">
+    <link rel="stylesheet" href="../../asset/css/allArticles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
 </head>
 
@@ -117,6 +119,19 @@
                             </tr> -->
                         </tbody>
                     </table>
+
+                    <!-- Success Modal -->
+                    <div id="deleteConfirmModal" class="modal" style="display:none;">
+                        <div class="modal-content">
+                            <h2>Confirm Delete</h2>
+                            <p>Are you sure you want to delete this article?</p>
+                            <div class="modal-actions">
+                                <button onclick="closeModal()">Cancel</button>
+                                <button onclick="confirmDelete()">OK</button>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </main>
         </div>
