--- a/pages/youra/CreateArticle.html
+++ b/pages/youra/CreateArticle.html
@@ -130,17 +130,17 @@
                         </div>
 
                         <!-- Thumbnail --> 
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                             <label class="form-label fw-semibold">
                                 Thumbnail
                             </label>
                             <input type="file" class="form-control" id="thumbnail">
-                        </div>
+                        </div> -->
 
                         <!-- Content -->
                         <div class="mb-4">
                             <label class="form-label fw-semibold">
-                                Content *
+                                Content * 
                             </label>
                             <textarea class="form-control" rows="6" id="content"
                                 placeholder="Write content here..."></textarea>
