--- a/pages/CreateArticle.html
+++ b/pages/CreateArticle.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="../../asset/css/dashboard.css">
+    <link rel="stylesheet" href="../asset/css/dashboard.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
@@ -24,7 +24,7 @@
             <div class="section-label">Menu</div>
 
             <nav class="flex-grow-1">
-                <a class="nav-itemx " href="#" data-nav="dashboard">
+                <a class="nav-itemx " href="#dashboard.html" data-nav="dashboard">
                     <span class="nav-icon"><i class="fa-solid fa-gauge-high"></i></span>
                     <span class="label">Dashboard</span>
                 </a>
@@ -37,7 +37,7 @@
                             style="font-size: 10px; transition: 0.3s;"></i>
                     </a>
                     <div class="nav-sub" id="articleSub">
-                        <a href="#" data-nav="all">All Articles</a>
+                        <a href="" data-nav="all">All Articles</a>
                         <a href="#" data-nav="create" class="active">Create Article</a>
                     </div>
                 </div>
@@ -96,6 +96,7 @@
             </header>
 
             <main class="p-4">
+
 
                 <div class="card p-4 shadow-sm rounded-4 border-0">
 
@@ -163,11 +164,12 @@
 
                 </div>
             </main>
+            
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../asset/js/CreateArticle.js"></script>
+    <script src="../asset/js/CreateArticle.js"></script>
     <script>
         const sidebar = document.getElementById("sidebar");
         const menuToggle = document.getElementById("menuToggle");
