--- a/pages/chhaiy/allArticles.html
+++ b/pages/chhaiy/allArticles.html
@@ -121,13 +121,21 @@
                     </table>
 
                     <!-- Success Modal -->
-                    <div id="deleteConfirmModal" class="modal" style="display:none;">
-                        <div class="modal-content">
-                            <h2>Confirm Delete</h2>
-                            <p>Are you sure you want to delete this article?</p>
-                            <div class="modal-actions">
-                                <button onclick="closeModal()">Cancel</button>
-                                <button onclick="confirmDelete()">OK</button>
+                    <div id="deleteConfirmModal" class="modal" tabindex="-1" style="display:none;">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5>Confirm Delete</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Are you sure you want to delete this article?</p>
+                                </div>
+                                <div class="modal-actions modal-footer">
+                                    <button onclick="closeModal()">Cancel</button>
+                                    <button onclick="confirmDelete()">OK</button>
+                                </div>
                             </div>
                         </div>
                     </div>
