--- a/pages/profile.html
+++ b/pages/profile.html
@@ -389,15 +389,19 @@
 
           <div class="d-flex justify-content-center gap-3">
             <button class="btn btn-light px-4" data-bs-dismiss="modal">Cancel</button>
-            <a href="logout.html" class="btn btn-danger px-4" id="confirmLogout">Logout</a>
+            <a href="../index.html" class="btn btn-danger px-4" id="confirmLogout">Logout</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+  
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../asset/js/dashboard.js"></script>
+  <script src="../asset/js/script.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
  <script>
  
@@ -463,6 +467,8 @@ avatarInput.addEventListener("change", () => {
   })
   .catch(err => console.error("Fetch Error:", err));
 });
+//logout
+
 
 
  
@@ -477,6 +483,13 @@ avatarInput.addEventListener("change", () => {
 
 // ចាប់ផ្ដើមដំណើរការ
 window.onload = fetchProfile;
+(function() {
+    const token = localStorage.getItem("token");
+    if (!token) {
+        // បើគ្មាន Token ទេ គឺមិនឱ្យនៅទំព័រនេះឡើយ
+        window.location.href = '../index.html';
+    }
+})();
  </script>
 </body>
 </html>
