--- a/pages/profile.html
+++ b/pages/profile.html
@@ -253,7 +253,7 @@
         <div class="divider"></div>
 
         <!-- ✅ add logout-trigger -->
-        <a class="logout-btn logout-trigger" href="#">
+        <a class="logout-btn logout-trigger" href="">
           <span class="ic"><i class="bi bi-box-arrow-right"></i></span>
           <span class="label">Logout</span>
         </a>
