--- a/pages/category.html
+++ b/pages/category.html
@@ -97,18 +97,13 @@
           <!-- Profile dropdown -->
           <div class="dropdown">
             <button
-              class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2"
-              type="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <img
-                class="avatar"
-                src="https://i.pravatar.cc/100?img=12"
-                alt="avatar"
-              />
-              <span class="fw-bold">User Admin</span>
-            </button>
+            class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <img class="avatar" src="" alt="avatar" id="avatarUser">
+            <span class="fw-bold" id="profileUser">User Admin</span>
+          </button>
 
             <ul
               class="dropdown-menu dropdown-menu-end shadow border-0"
@@ -344,11 +339,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../asset/js/dashboard.js"></script>
     <script src="../asset/js/category.js"></script>
+    <script src="../asset/js/script.js"></script>
 
     <script>
-      //  TOKEN =====
-      const token = localStorage.getItem("token");
-
       // ===== SHOW CATEGORY =====
       function showCategory() {
         fetch(
