--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -170,7 +170,7 @@
 
           <div class="d-flex justify-content-center gap-3">
             <button class="btn btn-light px-4" data-bs-dismiss="modal">Cancel</button>
-            <a href="../index.html" class="btn btn-danger px-4" id="confirmLogout">Logout</a>
+            <a href="" class="btn btn-danger px-4" id="confirmLogout">Logout</a>
           </div>
         </div>
       </div>
@@ -179,11 +179,11 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../asset/js/dashboard.js"></script>
+  <script src="../asset/js/script.js"></script>
 
   <script>
     // ===== TOKEN =====
-    const token = localStorage.getItem("token");
-    console.log(token);
+   
     if(!token){
       window.location.href = '../index.html';
     }
@@ -232,28 +232,7 @@
     }
     showArticles();
     
-    // Get Profile =====
-    function getProfile(){
-       fetch('https://blogs2.csm.linkpc.net/api/v1/auth/profile',{
-        method : 'GET',
-        headers : {
-          'Content-Type' : 'application/json',
-          'Authorization' : `Bearer ${token}`
-        }
-      })
-      .then(res => res.json())
-      .then(data => {
-        console.log(data);
-        document.getElementById('avatarUser').src = data.data.avatar;
-        document.getElementById('profileUser').textContent = data.data.firstName + " " + data.data.lastName;
-      })
-      .catch(err => {
-        console.log(err);
-      })
-    }
-    getProfile();
 
-   
 
   </script>
 </body>
