--- a/pages/profile.html
+++ b/pages/profile.html
@@ -223,7 +223,7 @@
 
         <!-- My Articles (collapsible) -->
         <button
-          class="nav-pill w-100 text-start active"
+          class="nav-pill w-100 text-start "
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#articlesMenu"
@@ -237,7 +237,7 @@
 
         <div class="collapse show" id="articlesMenu">
           <div class="submenu">
-            <a class="active" href="all-article.html">All Articles</a>
+            <a class="" href="all-article.html">All Articles</a>
             <a href="create-article.html">Create Article</a>
           </div>
         </div>
@@ -279,8 +279,8 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            <img class="avatar" src="https://i.pravatar.cc/100?img=12" alt="avatar">
-            <span class="fw-bold">User Admin</span>
+            <img class="avatar" src="." alt="avatar" id="avatarUser">
+            <span class="fw-bold" id="profileUser">User Admin</span>
           </button>
 
           <ul class="dropdown-menu dropdown-menu-end shadow border-0" style="border-radius: 16px; overflow:hidden;">
@@ -311,7 +311,7 @@
         <!-- Avatar -->
        <div class="pro-avatar-wrap">
   <div class="pro-avatar">
-    <img id="avatarImg" src="https://i.pravatar.cc/200?img=12" alt="avatar">
+    <img id="avatarImg" src="." alt="avatar">
   </div>
 
  <button class="pro-ic pro-del" id="btnDelAvatar" title="Remove photo">
