--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -137,11 +137,10 @@
           </div>
 
           <!-- Show all article in Dashboard -->
-
           <div class="row g-4" id="articlesGrid">
             
 
-          </div><!-- /row -->
+          </div>
 
           <!-- Empty state -->
           <div id="emptyState" class="articles-empty d-none">
@@ -150,7 +149,7 @@
             <div class="empty-sub">Try a different keyword.</div>
           </div>
 
-        </div><!-- /articles-wrap -->
+        </div>
 
       </section>
     </main>
@@ -182,7 +181,7 @@
   <script src="../asset/js/script.js"></script>
 
   <script>
-    // ===== TOKEN =====
+    // ===== TOKEN Validate =====
    
     if(!token){
       window.location.href = '../index.html';
