--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -10,6 +10,7 @@
   <!-- Bootstrap + Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="asset/aos-master/dist/aos.css">
 </head>
 
 <body>
@@ -175,14 +176,13 @@
       </div>
     </div>
   </div>
-
+  <script src="../asset/aos-master/src/js/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../asset/js/dashboard.js"></script>
   <script src="../asset/js/script.js"></script>
 
   <script>
     // ===== TOKEN Validate =====
-   
     if(!token){
       window.location.href = '../index.html';
     }
@@ -202,7 +202,7 @@
         console.log(data.data.items);
         data.data.items.forEach(element => {
           articlesGrid.innerHTML += `
-          <div class="col-12 col-md-6 col-xl-4 article-item" data-title="kkkkk chou youra">
+          <div class="col-12 col-md-6 col-xl-4 article-item" data-aos="fade-right" data-aos-delay="100">
               <a class="text-decoration-none text-reset" href="article-detail.html?id=2">
                 <article class="cardX h-100">
                   <div class="cardX-thumb">
