add Icon on your page

--- a/pages/test1.html
+++ b/pages/test1.html
@@ -103,10 +103,11 @@
               aria-expanded="false"
             >
               <img
-                class="avatar" id="avatarUser"
+                class="avatar"
                 src="https://i.pravatar.cc/100?img=12"
-                alt="avatar"/>
-              <span class="fw-bold" id="profileUser"></span>
+                alt="avatar"
+              />
+              <span class="fw-bold">User Admin</span>
             </button>
 
             <ul
@@ -213,7 +214,10 @@
                     <button class="btn btn-light px-4" data-bs-dismiss="modal">
                       Cancel
                     </button>
-                    <button class="btn btn-save px-4" onclick="createCategory()">
+                    <button
+                      class="btn btn-save px-4"
+                      onclick="createCategory()"
+                    >
                       Save
                     </button>
                   </div>
@@ -324,7 +328,10 @@
               <button class="btn btn-light px-4" data-bs-dismiss="modal">
                 Cancel
               </button>
-              <a href="logout.html" class="btn btn-danger px-4" id="confirmLogout"
+              <a
+                href="logout.html"
+                class="btn btn-danger px-4"
+                id="confirmLogout"
                 >Logout</a
               >
             </div>
@@ -336,13 +343,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../asset/js/dashboard.js"></script>
     <script src="../asset/js/category.js"></script>
-    <script src="../asset/js/script.js"></script>
 
     <script>
-      // TOKEN Validate=====
-      if (!token) {
-        window.location.href = "../index.html";
-      }
+      // ===== TOKEN =====
+      const token = localStorage.getItem("token");
 
       // ===== SHOW CATEGORY =====
       function showCategory() {
@@ -359,7 +363,7 @@
           .then((res) => res.json())
           .then((data) => {
             const categoryBody = document.getElementById("categoryBody");
-            categoryBody.innerHTML = "";
+            categoryBody.innerHTML = ""; // ✅ clear before render
 
             data.data.items.forEach((element) => {
               categoryBody.innerHTML += `
@@ -367,8 +371,7 @@
                   <td class="fw-bold">${element.name}</td>
                   <td class="text-end">
                     <button class="icon-btn icon-edit me-2" type="button"
-                      data-bs-toggle="modal" data-bs-target="#editCategoryModal"
-                      onclick="openEditCategory('${element.id}', '${element.name}')">
+                      data-bs-toggle="modal" data-bs-target="#editCategoryModal">
                       <i class="bi bi-pencil"></i>
                     </button>
 
@@ -392,6 +395,7 @@
         const categoryError = document.getElementById("categoryError");
         const categorySuccess = document.getElementById("categorySuccess");
 
+        // validate
         if (!createCategoryName.value.trim()) {
           categoryError.classList.remove("d-none");
           categorySuccess.classList.add("d-none");
@@ -416,12 +420,11 @@
             categorySuccess.classList.remove("d-none");
 
             categoryBody.innerHTML += `
-              <tr data-id="${data.data.id}">
+              <tr">
                 <td class="fw-bold">${data.data.name}</td>
                 <td class="text-end">
                   <button class="icon-btn icon-edit me-2" type="button"
-                    data-bs-toggle="modal" data-bs-target="#editCategoryModal"
-                    onclick="openEditCategory('${data.data.id}', '${data.data.name}')">
+                    data-bs-toggle="modal" data-bs-target="#editCategoryModal">
                     <i class="bi bi-pencil"></i>
                   </button>
 
@@ -435,13 +438,6 @@
             `;
 
             createCategoryName.value = "";
-
-            // close modal
-            const modalEl = document.getElementById("createCategoryModal");
-            const modal =
-            bootstrap.Modal.getInstance(modalEl) ||
-            new bootstrap.Modal(modalEl);
-            modal.hide();
           })
           .catch((err) => console.log(err));
       }
@@ -449,147 +445,58 @@
       // ===== DELETE ONLY (FIXED) =====
       let deleteId = null;
 
+      // 1) open modal + set id/name
       function openDeleteCategory(id, name) {
         deleteId = id;
         document.getElementById("deleteCatName").textContent = name || "this";
       }
 
-      let btnDeleteCategory = document.getElementById("btnDeleteCategory");
-      btnDeleteCategory.addEventListener("click", async () => {
-        if (!deleteId) return;
+      // 2) confirm delete
+      document
+        .getElementById("btnDeleteCategory")
+        .addEventListener("click", async () => {
+          if (!deleteId) return;
 
-        const oldText = btnDeleteCategory.innerHTML;
-        btnDeleteCategory.innerHTML = "Deleting...";
-        btnDeleteCategory.disabled = true;
+          try {
+            const res = await fetch(
+              `https://blogs2.csm.linkpc.net/api/v1/categories/${deleteId}`,
+              {
+                method: "DELETE",
+                headers: { Authorization: `Bearer ${token}` },
+              }
+            );
 
-        try {
-          const res = await fetch(
-            `https://blogs2.csm.linkpc.net/api/v1/categories/${deleteId}`,
-            {
-              method: "DELETE",
-              headers: { Authorization: `Bearer ${token}` },
+            // delete may return 204 no content
+            if (!res.ok) {
+              let msg = "Delete failed";
+              try {
+                const errData = await res.json();
+                msg = errData?.message || msg;
+              } catch (_) {}
+              alert(msg);
+              return;
             }
-          );
 
-          if (!res.ok) {
-            let msg = "Delete failed";
-            try {
-              const errData = await res.json();
-              msg = errData?.message || msg;
-            } catch (_) {}
-            alert(msg);
-            return;
+            // close modal
+            const modalEl = document.getElementById("deleteCategoryModal");
+            const modal =
+              bootstrap.Modal.getInstance(modalEl) ||
+              new bootstrap.Modal(modalEl);
+            modal.hide();
+
+            // remove row
+            const row = document.querySelector(
+              `#categoryBody tr[data-id="${deleteId}"]`
+            );
+            if (row) row.remove();
+
+            deleteId = null;
+          } catch (err) {
+            console.log(err);
           }
+        });
 
-          const modalEl = document.getElementById("deleteCategoryModal");
-          const modal =
-            bootstrap.Modal.getInstance(modalEl) ||
-            new bootstrap.Modal(modalEl);
-          modal.hide();
-
-          const row = document.querySelector(
-            `#categoryBody tr[data-id="${deleteId}"]`
-          );
-          if (row) row.remove();
-
-          deleteId = null;
-        } catch (err) {
-          console.log(err);
-          alert("Network error!");
-        } finally {
-          btnDeleteCategory.innerHTML = oldText;
-          btnDeleteCategory.disabled = false;
-        }
-      });
-
-      // ===== EDIT (OPEN MODAL) =====
-      function openEditCategory(id, name) {
-        document.getElementById("editCategoryId").value = id;
-        document.getElementById("editCategoryName").value = name || "";
-      }
-
-      // ===== UPDATE CATEGORY (FULL) =====
-      let btnUpdateCategory = document.getElementById("btnUpdateCategory");
-
-      btnUpdateCategory.addEventListener("click", async () => {
-        const editCategoryIdEl = document.getElementById("editCategoryId");
-        const editCategoryNameEl = document.getElementById("editCategoryName");
-
-        const id = editCategoryIdEl.value;
-        const newName = editCategoryNameEl.value.trim();
-
-        if (!id) return;
-
-        if (!newName) {
-          alert("Category name is required!");
-          return;
-        }
-
-        const oldText = btnUpdateCategory.innerHTML;
-        btnUpdateCategory.innerHTML = "Updating...";
-        btnUpdateCategory.disabled = true;
-
-        try {
-          const res = await fetch(
-            `https://blogs2.csm.linkpc.net/api/v1/categories/${id}`,
-            {
-              method: "PUT", // if your backend uses PATCH, change to "PATCH"
-              headers: {
-                "Content-Type": "application/json",
-                Authorization: `Bearer ${token}`,
-              },
-              body: JSON.stringify({ name: newName }),
-            }
-          );
-
-          if (!res.ok) {
-            let msg = "Update failed";
-            try {
-              const errData = await res.json();
-              msg = errData?.message || msg;
-            } catch (_) {}
-            alert(msg);
-            return;
-          }
-
-          // Update row in table
-          const row = document.querySelector(`#categoryBody tr[data-id="${id}"]`);
-          if (row) {
-            const nameTd = row.querySelector("td");
-            if (nameTd) nameTd.textContent = newName;
-
-            // update onclick name for next time
-            const editBtn = row.querySelector(".icon-edit");
-            if (editBtn) {
-              editBtn.setAttribute(
-                "onclick",
-                `openEditCategory('${id}', '${newName}')`
-              );
-            }
-
-            const delBtn = row.querySelector(".icon-del");
-            if (delBtn) {
-              delBtn.setAttribute(
-                "onclick",
-                `openDeleteCategory('${id}', '${newName}')`
-              );
-            }
-          }
-
-          // close modal
-          const modalEl = document.getElementById("editCategoryModal");
-          const modal =
-            bootstrap.Modal.getInstance(modalEl) ||
-            new bootstrap.Modal(modalEl);
-          modal.hide();
-        } catch (err) {
-          console.log(err);
-          alert("Network error!");
-        } finally {
-          btnUpdateCategory.innerHTML = oldText;
-          btnUpdateCategory.disabled = false;
-        }
-      });
+        
     </script>
   </body>
 </html>
