--- a/pages/profile.html
+++ b/pages/profile.html
@@ -7,10 +7,10 @@
   <title>Admin Dashboard - All Articles</title>
 
   <link rel="stylesheet" href="../asset/css/dashboard.css">
+
   <!-- Bootstrap + Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="../asset/css/profile.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
         </a>
 
         <!-- My Articles (collapsible) -->
-        <button class="nav-pill w-100 text-start active" type="button" data-bs-toggle="collapse"
+        <button class="nav-pill w-100 text-start " type="button" data-bs-toggle="collapse"
           data-bs-target="#articlesMenu" aria-expanded="true" aria-controls="articlesMenu">
           <span class="ic"><i class="bi bi-file-earmark-text"></i></span>
           <span class="label flex-grow-1">My Articles</span>
@@ -46,7 +46,7 @@
 
         <div class="collapse show" id="articlesMenu">
           <div class="submenu">
-            <a class="active" href="all-article.html">All Articles</a>
+            <a class="" href="all-article.html">All Articles</a>
             <a href="create-article.html">Create Article</a>
           </div>
         </div>
@@ -61,7 +61,8 @@
       <div class="sidebar-footer">
         <div class="divider"></div>
 
-        <a class="logout-btn logout-trigger" href="#">
+        <!-- add logout-trigger -->
+        <a class="logout-btn logout-trigger" href="">
           <span class="ic"><i class="bi bi-box-arrow-right"></i></span>
           <span class="label">Logout</span>
         </a>
@@ -81,30 +82,29 @@
 
         <!-- Profile dropdown -->
         <div class="dropdown">
-  <button class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2" type="button"
-    data-bs-toggle="dropdown" aria-expanded="false">
-    <img id="topAvatar" class="avatar" src="https://i.pravatar.cc/100?img=12" alt="avatar">
-    <span class="fw-bold" id="topbarName">User Admin</span>
-  </button>
+          <button class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2" type="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <img class="avatar" src="." alt="avatar" id="avatarUser">
+            <span class="fw-bold" id="profileUser">User Admin</span>
+          </button>
 
-  <ul class="dropdown-menu dropdown-menu-end shadow border-0" style="border-radius: 16px; overflow:hidden;">
-    <li class="px-3 py-2 border-bottom bg-light">
-       <div class="small text-muted">Logged in as:</div>
-       <div class="fw-sm" id="topbarEmail" style="font-size: 13px;">user@example.com</div>
-    </li>
-    <li>
-      <a class="dropdown-item py-2" href="profile.html">
-        <i class="bi bi-person me-2"></i> Profile
-      </a>
-    </li>
-    <li><hr class="dropdown-divider my-1"></li>
-    <li>
-      <a class="dropdown-item py-2 text-danger logout-trigger" href="#">
-        <i class="bi bi-box-arrow-right me-2"></i> Logout
-      </a>
-    </li>
-  </ul>
-</div>
+          <ul class="dropdown-menu dropdown-menu-end shadow border-0" style="border-radius: 16px; overflow:hidden;">
+            <li>
+              <a class="dropdown-item py-2" href="profile.html">
+                <i class="bi bi-person me-2"></i> Profile
+              </a>
+            </li>
+            <li>
+              <hr class="dropdown-divider my-1">
+            </li>
+            <li>
+              <!-- add logout-trigger -->
+              <a class="dropdown-item py-2 text-danger logout-trigger" href="#">
+                <i class="bi bi-box-arrow-right me-2"></i> Logout
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
       <!-- CONTENT -->
@@ -118,11 +118,10 @@
               <!-- Avatar -->
               <div class="pro-avatar-wrap">
                 <div class="pro-avatar">
-                  <img id="avatarImg" src="https://i.pravatar.cc/200?img=12" alt="avatar">
+                  <img id="avatarImg" src="." alt="avatar">
                 </div>
 
-                <!--  id from "btnDelAvatar" to "btnDeleteAvatar" to avoid conflict with JS function name -->
-                <button class="pro-ic pro-del" id="btnDeleteAvatar" title="Remove photo" onclick="btnDelAvatar()">
+                <button class="pro-ic pro-del" id="btnDelAvatar" title="Remove photo">
                   <i class="bi bi-trash"></i>
                 </button>
 
@@ -133,6 +132,7 @@
                 <input id="avatarInput" type="file" accept="image/*" hidden>
               </div>
 
+
               <!-- Name / Email -->
               <div class="pro-id">
                 <h2 class="pro-name" id="displayName">Kon Khmer</h2>
@@ -142,8 +142,7 @@
 
               <!-- Button -->
               <div class="pro-actions">
-                <!-- Removed onclick here — listener is now added via JS in DOMContentLoaded -->
-                <button class="btn pro-btn" id="btnEdit" type="button">
+                <button class="btn pro-btn" id="btnEdit" onclick="btnedit()" type="button">
                   <i class="bi bi-pencil-square me-2"></i> Edit Profile
                 </button>
               </div>
@@ -169,7 +168,7 @@
               </div>
 
               <div class="pro-form-actions" id="saveRow" style="display:none;">
-                <button class="btn btn-light px-4" type="button" id="btnCancel" onclick="btnedit()">Cancel</button>
+                <button class="btn btn-light px-4" type="button" id="btnCancel">Cancel</button>
                 <button class="btn pro-btn-save px-4" type="submit" id="btnSave">
                   <i class="bi bi-check2-circle me-2"></i> Save Changes
                 </button>
@@ -184,7 +183,7 @@
     </main>
   </div><!-- /app -->
 
-  <!-- Logout Confirm Modal -->
+  <!-- Logout Confirm Modal (MUST be outside grid/section) -->
   <div class="modal fade" id="logoutModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content border-0 shadow" style="border-radius:18px;">
@@ -205,13 +204,14 @@
     </div>
   </div>
 
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../asset/js/dashboard.js"></script>
   <script src="../asset/js/script.js"></script>
-  <!-- SweetAlert2 must load BEFORE profile.js so Swal is available -->
+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../asset/js/profile.js"></script>
-
 </body>
 
 </html>
