--- a/pages/profile.html
+++ b/pages/profile.html
@@ -7,6 +7,8 @@
   <title>Admin Dashboard - All Articles</title>
 
   <link rel="stylesheet" href="../asset/css/dashboard.css">
+  <link rel="stylesheet" href="../asset/css/profile.css">
+
 
   <!-- Bootstrap + Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
