--- a/pages/all-article.html
+++ b/pages/all-article.html
@@ -82,11 +82,14 @@
 
         </div>
 
-        <!-- Profile dropdown -->
+          <!-- Profile dropdown -->
         <div class="dropdown">
-          <button class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2" type="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <img class="avatar" src="https://i.pravatar.cc/100?img=12" alt="avatar" id="avatarUser">
+          <button
+            class="btn profile-pill dropdown-toggle d-flex align-items-center gap-2"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <img class="avatar" src="" alt="avatar" id="avatarUser">
             <span class="fw-bold" id="profileUser">User Admin</span>
           </button>
 
@@ -96,12 +99,10 @@
                 <i class="bi bi-person me-2"></i> Profile
               </a>
             </li>
-            <li>
-              <hr class="dropdown-divider my-1">
-            </li>
+            <li><hr class="dropdown-divider my-1"></li>
             <li>
               <!-- ✅ add logout-trigger -->
-              <a class="dropdown-item py-2 text-danger logout-trigger" href="#">
+              <a class="dropdown-item py-2 text-danger logout-trigger" href="" id="logOut">
                 <i class="bi bi-box-arrow-right me-2"></i> Logout
               </a>
             </li>
